force-app/main/default/objects/Company_Metrics__c/Company_Metrics__c.object-meta.xml
<CustomObject>
    <label>Company Metrics</label>
    <nameField>
        <label>Business Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>