force-app/main/default/objects/Company_Metrics__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue (Millions)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>