force-app/main/default/objects/Company_Metrics__c/fields/Employee_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Employee_Headcount__c</fullName>
    <label>Employee Headcount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>