force-app/main/default/objects/Company_Metrics__c/fields/Internal_Cost_of_Carbon__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost_of_Carbon__c</fullName>
    <label>Internal Cost of Carbon</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>